# OOTPISP-2023

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json
tasks/task_02/: readme.md
tasks/task_03/: README.md
tasks/task_08/: README.md
trunc/PO9210674/task_01/: Readme.md
trunc/PO9210674/task_02/: report2.md
trunc/task_02/: README.md
trunk/PO-8_210640/task_01/: README.md
trunk/PO-8_210640/task_03/: README.md
trunk/PO-8_210640/task_04/: README.md
trunk/PO-8_210640/task_08/: README.md
trunk/PO-8_210641/task_02/: README.md
trunk/PO-8_210641/task_03/: README.md
trunk/PO-8_210641/task_04/: README.md
trunk/PO-8_210641/task_08/: README.md
trunk/PO-8_210642/task_01/: README.md
trunk/PO-8_210642/task_03/: README.md
trunk/PO-8_210642/task_08/src/: Builder.cpp  CMakeLists.txt
trunk/PO-8_210643/task_02/: README.md
trunk/PO-8_210643/task_04/: README.md
trunk/PO-8_210643/task_06/: README.md
trunk/PO-8_210643/task_08/: README.md
trunk/PO-8_210644/task_01/: README.md
trunk/PO-8_210644/task_02/: README.md
trunk/PO-8_210644/task_04/: README.md
trunk/PO-8_210644/task_05/: readme.md
trunk/PO-8_210647/task_07/: README.md
trunk/PO-8_210648/task_01/: README.md  lab1.sln
trunk/PO-8_210648/task_02/: README.md  lab2.sln
trunk/PO-8_210648/task_05/: README.md  WpfApp1.sln
trunk/PO-8_210648/task_06/: README.md
trunk/PO-8_210649/task_05/: README.md  WpfApp1.sln
trunk/PO-8_210649/task_06/: README.md
trunk/PO-8_210719/task_03/: README.md
trunk/PO-8_210719/task_04/: README.md
trunk/PO-8_210719/task_05/: README.md
trunk/PO-9_210650/task_03/: README.md
trunk/PO-9_210650/task_04/: README.md
trunk/PO-9_210651/task_01/: README.md
trunk/PO-9_210651/task_02/: README.md
trunk/PO-9_210651/task_03/: README.md
trunk/PO-9_210651/task_03/src/: CMakeLists.txt  main.cpp  task1.cpp  task1.h  task1.ui  task2.cpp  task2.h  task2.ui  task3.cpp  task3.h  task3.ui  task4.cpp  task4.h  task4.ui  task5.cpp  task5.h  task5.ui  task6.cpp  task6.h  task6.ui
trunk/PO-9_210651/task_06/: readme.md
trunk/PO-9_210651/task_06/src/: CMakeLists.txt  main.cpp
trunk/PO-9_210653/lab3/: README.md
trunk/PO-9_210653/lab4/: README.md
trunk/PO-9_210653/lab6/: README.md
trunk/PO-9_210653/lab8/: README.md
trunk/PO-9_210654/task_01/: README.md
trunk/PO-9_210654/task_02/: README.md
trunk/PO-9_210654/task_03/: README.md
trunk/PO-9_210654/task_04/: README.md
trunk/PO-9_210654/task_05/: README.md
trunk/PO-9_210654/task_06/: README.md
trunk/PO-9_210654/task_08/: README.md
trunk/PO-9_210657/lab2/: README.md
trunk/PO-9_210657/lab3/: readme.md
trunk/PO-9_210657/lab3/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  task1window.cpp  task1window.h  task1window.ui  task2window.cpp  task2window.h  task2window.ui  task3window.cpp  task3window.h  task3window.ui  task4window.cpp  task4window.h  task4window.ui  task5window.cpp  task5window.h  task5window.ui  task6window.cpp  task6window.h  task6window.ui
trunk/PO-9_210657/lab4/: readme.md
trunk/PO-9_210657/lab5/: readme.md
trunk/PO-9_210657/lab6/: readme.md
trunk/PO-9_210658/task-03/: README.md
trunk/PO-9_210658/task_01/: README.md
trunk/PO-9_210658/task_02/: README.md
trunk/PO-9_210658/task_04/: README.md
trunk/PO-9_210658/task_05/: README.md
trunk/PO-9_210658/task_06/: README.md
trunk/PO-9_210658/task_07/: README.md
trunk/PO-9_210658/task_08/: README.md
trunk/PO-9_210660/lab3/: readme.md
trunk/PO-9_210660/task_06/: README.md
trunk/PO-9_210661/task_02/: README.md
trunk/PO-9_210661/task_03/: README.md
trunk/PO-9_210661/task_06/: readme.md
trunk/PO-9_210661/task_07/: README.md
trunk/PO-9_210662/lab_3/: README.md
trunk/PO-9_210663/task_01/: README.md
trunk/PO-9_210663/task_02/: README.md
trunk/PO-9_210663/task_03/: README.md
trunk/PO-9_210663/task_04/: README.md
trunk/PO-9_210663/task_05/: README.md
trunk/PO-9_210663/task_06/: README.md
trunk/PO-9_210663/task_07/: README.md
trunk/PO-9_210663/task_08/: README.md
trunk/PO-9_210664/task_03/: README.md
trunk/PO-9_210664/task_05/: README.md
trunk/PO-9_210664/task_07/: README.md
trunk/PO-9_210664/task_08/: README.md
trunk/PO-9_210665/lab_01/: README.md
trunk/PO-9_210666/task_01/: README.md
trunk/PO-9_210666/task_03/: README.md
trunk/PO-9_210666/task_04/: README.md
trunk/PO-9_210667/task_01/: README.md
trunk/PO-9_210667/task_03/: README.md
trunk/PO-9_210667/task_05/: README.md
trunk/PO-9_210667/task_06/: README.md
trunk/PO-9_210667/task_08/: README.md
trunk/PO-9_210668/task_02/: README.md
trunk/PO-9_210671/task_01/src/: CMakeLists.txt  main.cpp
trunk/PO-9_210674/task_05/src/: CMakeLists.txt
(+329 files in other folders)
